# matthewplotlib

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS.md  README.md  REFERENCE.md  docs-research.md  generate_docs.py  makefile  matthewplotlib.py  mattplotlib.py  pyproject.toml
docs/: CNAME  changelog.html  examples.html  index.html  matthewplotlib.html  pdoc.css  quickstart.html  roadmap.html  search.js
docs/matthewplotlib/: colormaps.html  colors.html  core.html  data.html  plots.html  unscii16.html
examples/: braille_test.py  calendar_heatmap.py  colormaps.py  dashboard.py  demo.py  functions.py  hilbert_curve.py  image.py  jointplot.py  lissajous.py  mandelbrot.py  quickstart.py  quickstart1.py  quickstart2.py  scatter.py  teacher_student.py  teapot.py  time_series_histogram.py  voronoi.py
matthewplotlib/: __init__.py  colormaps.py  colors.py  core.py  data.py  plots.py  unscii16.py
pages/: examples.md  quickstart.md  roadmap.md
templates/: custom.css  module.html.jinja2  page.html
tests/: test_colormaps.py  test_colors.py  test_core.py  test_data.py  test_examples.py
wip/: design.md  example-webcam.py  myplot.py  octo.py  older.py  parens.md
