[project]
name = "matthewplotlib"
version = "0.0.0"
authors = [
    { name="Matthew Farrugia-Roberts", email="matthew@far.in.net" },
]
description = "A Python plotting library that isn't painful."
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

requires-python = ">=3.10"
dependencies = [
    # core
    "numpy",
    "einops",
    "numpy-hilbert-curve",
    # for image rendering
    "Pillow",
    "unscii",
]

[project.urls]
Homepage = "https://github.com/matomatical/matthewplotlib"
Issues = "https://github.com/matomatical/matthewplotlib/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "matthewplotlib"
