[project]
name = "matthewplotlib"
version = "0.2.1"
authors = [
    { name="Matthew Farrugia-Roberts", email="matthew@far.in.net" },
]
description = "A Python plotting library that isn't painful."
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Intended Audience :: Science/Research",
]

requires-python = ">=3.10"
dependencies = [
    # core
    "numpy",
    "einops",
    "numpy-hilbert-curve",
    # for image rendering
    "Pillow",
]

[project.optional-dependencies]
dev = [
  "mypy",
]
examples = [
  "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/matomatical/matthewplotlib"
Issues = "https://github.com/matomatical/matthewplotlib/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
packages = ["matthewplotlib"]

[[tool.mypy.overrides]]
module = ["hilbert"]
follow_untyped_imports = true
